--- a/src/components/workerItem/workerItem.scss
+++ b/src/components/workerItem/workerItem.scss
@@ -8,12 +8,17 @@
     .delete-modal{
       position: absolute;
       width: 300px;
-      left: 50%;
+      left: 37%;
       z-index: 200;
+      top:20%;
      background: white;
       border:1px solid grey;
       border-radius: 10px;
       @media(max-width: 991px){
+        left: 38px;
+        width: 250px;
+      }
+      @media(max-width: 350px){
         left: 15px;
         width: 250px;
       }
@@ -71,7 +76,7 @@
   .buttons{
     display: flex;
     @media(max-width: 560px){
-width: 100%;
+     width: 100%;
       justify-content: end;
     }
     button:first-child{
