--- a/src/components/editCompanyComponent/editCompanyComponent.scss
+++ b/src/components/editCompanyComponent/editCompanyComponent.scss
@@ -13,13 +13,15 @@
   }
   h3{
     text-transform: capitalize;
+    margin: 0;
   }
 
   @media(max-width: 991px){
     left: 15px;
   }
   button{
-    margin: 10px 0;
+    margin-top: 10px;
+    margin-left: auto;
     padding: 14px 36px;
     border: none;
     cursor: pointer;
