--- a/src/components/createWorkerComponent/createWorkerComponent.scss
+++ b/src/components/createWorkerComponent/createWorkerComponent.scss
@@ -1,6 +1,5 @@
 
 .create-worker-comp{
-  position: absolute;
   width: 80%;
   z-index: 120;
   background-color: white;
@@ -8,6 +7,9 @@
   border: 1px solid #202041;
   border-radius: 10px;
   left: 8%;
+  position: fixed;
+  top:15%;
+
   h3{
     margin: 0;
   }
