--- a/src/components/editCompanyComponent/editCompanyComponent.scss
+++ b/src/components/editCompanyComponent/editCompanyComponent.scss
@@ -1,12 +1,21 @@
-.company-create{
-  position: absolute;
+.edit-company-create{
+  position: fixed;
   width: 80%;
   z-index: 120;
   background-color: white;
   padding: 20px;
   border: 1px solid #202041;
   border-radius: 10px;
-  left: 8%;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  @media (max-height: 530px) {
+    position: relative;
+    top: unset;
+    left: unset;
+    transform: unset;
+    margin: 0 auto;
+  }
   .button-div{
     display: flex;
     justify-content: end;
@@ -16,9 +25,6 @@
     margin: 0;
   }
 
-  @media(max-width: 991px){
-    left: 15px;
-  }
   button{
     margin-top: 10px;
     margin-left: auto;
