--- a/src/pages/companyPage/companyPage.scss
+++ b/src/pages/companyPage/companyPage.scss
@@ -5,6 +5,7 @@
 
   h2 {
     color: #3684d9;
+    margin: 0;
   }
 
   .background {
@@ -16,6 +17,7 @@
     top: 0;
     left: 0;
     z-index: 120;
+    padding: 30px 0;
   }
 
   .create-company {
@@ -24,6 +26,9 @@
     margin-bottom: 20px;
     @media(max-width: 991px) {
       justify-content: center;
+    }
+    @media(max-width: 594px){
+      margin-top: 20px;
     }
 
     button {
