--- a/src/components/company/companyComponent.scss
+++ b/src/components/company/companyComponent.scss
@@ -38,3 +38,13 @@
     height: 25px;
   }
 }
+.company-page{
+  .table{
+    th  {
+      vertical-align: middle;
+    }
+    td{
+      vertical-align: middle;
+    }
+  }
+}
