--- a/src/components/workerItem/workerItem.scss
+++ b/src/components/workerItem/workerItem.scss
@@ -67,7 +67,7 @@
       table{
         width: 100%;
         td{
-          width: 230px;
+          width: 33%;
           vertical-align: middle;
         }
       }
